# vegalab

./: .gitignore  CLAUDE.md  MODEL_CANDIDATES_BRIEF.md  MODEL_CANDIDATES_RESEARCH.md  Makefile  README.md  bugs.md  pyproject.toml
.claude/: settings.local.json
checkpoints/: README.md
checkpoints/wave2/: iqn_seed901_150k_diagnostic.json  iqn_seed901_150k_diagnostic.pt
optspread/: __init__.py  config.py  rng.py
optspread/actions/: library.py  margin_class.py  templates.py
optspread/agents/: base.py  baselines.py
phases/: PHASE1_BRIEF.md  PHASE2_BRIEF.md  PHASE2_GATE_REPORT.md  PHASE3_BRIEF.md  PHASE3_GATE_REPORT.md  PHASE4_BRIEF.md  PHASE4_GATE_REPORT.md  PHASE5_BRIEF.md  PHASE5_GATE_REPORT.md  PHASE6_BRIEF.md  PHASE6_GATE_REPORT.md  PHASE7_BRIEF.md  PHASE7_GATE_REPORT.md  PHASE8_BRIEF.md  PHASE8_GATE_REPORT.md  PROJECT_LEDGER_AND_REPORTING.md  phase4_1a_bv2_primary.json  phase4_1a_ff_primary.json  phase4_c0_diagnostics_150k.json
tests/: conftest.py  test_baselines.py  test_black_scholes.py  test_checkpoint_diagnostics.py  test_compare_harness.py  test_cos_pricer.py  test_costs.py  test_determinism.py  test_distribution_recovery.py  test_domain_randomization.py  test_env_api.py  test_evaluator.py  test_fat_tail_bandit.py  test_fat_tail_mdp.py  test_framestack.py  test_gae.py  test_harness_smoke.py  test_heston_generator.py  test_invariants.py  test_iqn_tau_embedding.py  test_margin.py  test_no_edge_gate.py  test_phase4_behavioral_trace.py  test_phase5_baselines_sim2real.py  test_phase5_data_eval.py  test_phase6_generalization.py  test_phase7_interpret.py  test_phase8_robustness_reporting.py  test_pnl.py  test_ppo_network.py  test_ppo_update.py  test_promotion_gate.py  test_quantile_loss.py  test_regime_features.py  test_rehearsal_generator.py  test_replay.py  test_replay_priority.py  test_resumable_training.py  test_reward.py  test_risk_mean_cvar.py  (+7 more)
(+135 files in other folders)
